--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -20,3 +20,16 @@
   text-align: center;
   font-size: 0.75rem;
 }
+
+.themeSwitcher {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+
+  color: var(--text-secondary);
+  margin-left: 4px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
